# trasgo

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  The context window as a computational substrate formal foundations for in-context virtualization.md  compass_artifact_wf-d9a724f1-ffec-43a3-8ff9-cf58ad545420_text_markdown.md  dashboard.mjs  package-lock.json  package.json  trasgo-paper-final.md  trasgo-t8-implementation.md  trasgo-thesis.md  trasgo.cmd
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml  release.yml
demos/: 01-grammar-induction.md  02-cross-domain-isa.md  03-state-machine.md  04-protocol-execution.md  05-factory-copilot.md  06-revenue-guard.md  07-formal-reasoning.md  README.md  showcase.html
docs/: codec-grammar.md  field-map.md  foundations.md  index.html  isa-mapping.md  theory.md
examples/: evolution.md  multi-agent.md  single-domain.md
mobile/trasgo-mobile/: .gitignore  README.md  app.json  (+2 more)
rust/trasgo/: Cargo.toml
rust/trasgo/assets/tokenizers/: SOURCES.md
rust/trasgo/src/: cli.rs  legacy.rs  lib.rs  main.rs  models.rs  runtime.rs  storage.rs  token_science.rs
scripts/: ci-smoke.mjs  omni-runner.mjs  packaged-smoke.mjs  release-check.mjs  render_demo_gif.py  trasgo-launch.cjs
src/: boot.md  cot.md  hyperprotocol.md  mode-lock.md  validate.md
tests/: bench_deepseek-chat.json  bench_deepseek.json  bench_glm-5.json  bench_liquid_lfm2-24b-a2b_json.json  bench_medgemma-27b-text-it_json.json  bench_medgemma27b.json  bench_nemotron.json  bench_nvidia_nemotron-3-nano-4b.json  bench_online.py  bench_structured_results.json  calibration-suite.md  demo.html  harness-unit.mjs  live-demo.html  quick_research.py  research_report.html  research_results.json  research_results_27b.json  research_results_4b.json  research_runner.py  run_calibration.py  run_structured.py  scale-threshold.md  v1-cli.mjs
(+60 files in other folders)
