[package]
name = "trasgo"
version = "0.1.0"
edition = "2021"
description = "Trasgo native CLI for codec-native token science and routing."
license = "MIT"
repository = "https://github.com/jesusvilela/trasgo"
homepage = "https://jesusvilela.github.io/trasgo/"
readme = "../../README.md"
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
miktik = { version = "0.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.9.1"
tokenizers = "0.22.2"
