[package]
name = "trasgo"
version = "0.2.8"

edition = "2021"
description = "Native orchestrator for the Trasgo semantic runtime and §1 context codec."
license = "MIT"
repository = "https://github.com/jesusvilela/trasgo"
homepage = "https://jesusvilela.github.io/trasgo/"
readme = "../../README.md"
exclude = ["assets/tokenizers/*"]
keywords = ["llm", "codec", "agentic", "formal-reasoning", "semantic-runtime"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
miktik = { version = "0.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.9.1"
tokenizers = "0.22.2"
